base:cmds:Fix unknown git in incidented.rc
Change-Id: Ic0ced3f80fed6ccbf4cd645a3a2960242dce9580

--- a/cmds/incidentd/incidentd.rc
+++ b/cmds/incidentd/incidentd.rc
@@ -14,8 +14,7 @@
 
 service incidentd /system/bin/incidentd
     class main
-    user incidentd
-    group incidentd log readproc
+    group log readproc
     capabilities KILL SYS_PTRACE
 
 on post-fs-data
